fixed spacing issue with contact links once viewport is 423px wide.

--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -1754,14 +1754,14 @@ img {
   }
 
   .myLinkedIn{
-    top: 65px;
+    top: 68px;
   }
 
   .myTwitter{
-    top: 35px;
+    top: 38px;
   }
 
   .myGitHub{
-    top: 5px;
+    top: 8px;
   }
 }
